# C_DSA_interactive_suite

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: benchmark.h  benchmark_demo.c  benchmark_flow.c  benchmark_trees.c
src/: main.c
src/advanced_graph_algorithms/: advanced_graph_algorithms.h  bipartite_matching.c  dinic.c  edmonds_karp.c  eulerian_path.c  ford_fulkerson.c  hopcroft_karp.c  scc.c
src/advanced_heaps/: advanced_heaps.h
src/advanced_sorting_algorithms/: advanced_sorting.h  advanced_sorting_demo.c  heap_sort.c  merge_sort.c  quick_sort.c  radix_sort.c
src/backtracking/: backtracking.h  backtracking_demo.c  graph_coloring.c  knights_tour.c  n_queens.c  rat_in_maze.c  sudoku.c
src/benchmark/: benchmark.h
src/data_structures/: circular_queue.c  data_structures.h  data_structures_demo.c  dcll.c  deque.c  main.c  priority_queue.c  scll.c  segment_tree.c  simple_queue.c  sll.c  stack.c
src/dynamic_programming/: dynamic_programming.h  dynamic_programming_demo.c  lcs.c
src/error_correction_algorithms/: crc.c  crc_receiver.c  error_correction_algorithms.h  error_correction_algorithms_demo.c  parity_bit.c
src/expression_evaluation/: expression_evaluation_demo.c  infix_to_postfix.c  parantheses_checker.c  postfix_evaluation.c  safe_input_postfix.c
src/graph_traversals/: astar.c  bfs.c  bipartite_matching.c  dfs.c  dijkstra.c  dinic.c  floyd_warshall.c  graph_traversals.h  graph_traversals_demo.c  graph_visualize.c  greedy_best_first_search.c  prim.c  scc_visualize.c  topological_sort.c
src/hashing/: linear_probing.c  quadratic_probing.c
src/help/: help.c
src/job_scheduling/: fcfs.c  job_scheduling.h  job_scheduling_demo.c  preemptive_priority.c  priority_scheduling.c  round_robin.c  sjf.c  srtf.c
src/process_synchronization/: dining_philosophers.c
src/trees/: avl.c  (+9 more)
tests/: test_astar.c  test_circ_queue.c  test_dcll.c  test_fcfs.c  test_greedy_best_first_search.c  test_history_logger.c  test_parity_bit.c  test_simple_queue.c  test_sjf.c  test_topological_sort.c  test_trie.c
tui/: tui.c
(+41 files in other folders)
